A few more refinements to documentation, and new icons!